--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "angular-datatables": "^14.0.0",
+    "angular-moment": "^1.3.0",
+    "bootstrap": "^5.2.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,7 +33,9 @@
     "@angular-devkit/build-angular": "^14.0.2",
     "@angular/cli": "~14.0.2",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
